--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
@@ -14,7 +16,8 @@
     "react-is": "^16.8.0",
     "react-typeform": "^1.0.3",
     "styled-components": "^5.0.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
