--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "lodash": "^4.17.21",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
