--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-is": "^16.8.0",
     "react-typeform": "^1.0.3",
     "styled-components": "^5.0.0",
